@@ -7,7 +7,6 @@ import me.roinujnosde.titansbattle.types.GameConfiguration;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 public class GamesCompletion extends AbstractCompletion {
     public GamesCompletion(TitansBattle plugin) {
@@ -22,6 +21,6 @@ public class GamesCompletion extends AbstractCompletion {
     @Override
     public Collection<String> getCompletions(BukkitCommandCompletionContext context) throws InvalidCommandArgument {
         return getConfigurationDao().getConfigurations(GameConfiguration.class).stream()
-                .map(GameConfiguration::getName).collect(Collectors.toList());
+                .map(GameConfiguration::getName).toList();
     }
 }
