@@ -4,83 +4,131 @@ import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.events.GroupWinEvent;
 import me.roinujnosde.titansbattle.events.PlayerWinEvent;
 import me.roinujnosde.titansbattle.exceptions.CommandNotSupportedException;
-import me.roinujnosde.titansbattle.types.*;
+import me.roinujnosde.titansbattle.types.GameConfiguration;
+import me.roinujnosde.titansbattle.types.Group;
+import me.roinujnosde.titansbattle.types.Kit;
+import me.roinujnosde.titansbattle.types.Warrior;
+import me.roinujnosde.titansbattle.types.Winners;
 import me.roinujnosde.titansbattle.utils.Helper;
 import me.roinujnosde.titansbattle.utils.SoundUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
+import org.bukkit.event.player.PlayerRespawnEvent;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.text.MessageFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.*;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.FIRST;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.KILLER;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.SECOND;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.THIRD;
 
 public class EliminationTournamentGame extends Game {
 
     private final List<Duel<Warrior>> playerDuelists = new ArrayList<>();
     private final List<Duel<Group>> groupDuelists = new ArrayList<>();
     private final List<Warrior> waitingThirdPlace = new ArrayList<>();
-    private boolean thirdPlaceBattle = false;
 
+    private boolean thirdPlaceBattle = false;
     private @NotNull List<Warrior> firstPlaceWinners = new ArrayList<>();
     private @Nullable List<Warrior> secondPlaceWinners;
     private @Nullable List<Warrior> thirdPlaceWinners;
 
-    public EliminationTournamentGame(TitansBattle plugin, GameConfiguration config) {
+    public EliminationTournamentGame(final TitansBattle plugin, final GameConfiguration config) {
         super(plugin, config);
     }
 
     @Override
-    public boolean isInBattle(@NotNull Warrior warrior) {
+    public boolean isInBattle(@NotNull final Warrior warrior) {
         if (!battle) {
             return false;
         }
         return isCurrentDuelist(warrior);
     }
 
-    private boolean isCurrentDuelist(@NotNull Warrior warrior) {
+    private boolean isCurrentDuelist(@NotNull final Warrior warrior) {
         if (!getConfig().isGroupMode()) {
-            return getFirstWarriorDuel().map(d -> d.isDuelist(warrior)).orElse(false);
+            return getFirstWarriorDuel()
+                    .map(d -> d.isDuelist(warrior))
+                    .orElse(false);
         } else {
-            return getFirstGroupDuel().map(d -> d.isDuelist(getGroup(warrior))).orElse(false);
+            final Group group = getGroup(warrior);
+            if (group == null) {
+                return false;
+            }
+            return getFirstGroupDuel()
+                    .map(d -> d.isDuelist(group))
+                    .orElse(false);
         }
     }
 
-    private List<Warrior> getDuelLosers(@NotNull Warrior defeated) {
-        Group group = getGroup(defeated);
+    private List<Warrior> getDuelLosers(@NotNull final Warrior defeated) {
+        final Group group = getGroup(defeated);
         if (group != null && getConfig().isGroupMode()) {
-            return casualties.stream().filter(p -> isMember(group, p)).collect(Collectors.toList());
+            return casualties.stream()
+                    .filter(p -> isMember(group, p))
+                    .collect(Collectors.toCollection(ArrayList::new));
         }
-        return Collections.singletonList(defeated);
+        final List<Warrior> single = new ArrayList<>();
+        single.add(defeated);
+        return single;
     }
 
-    private List<Warrior> getDuelWinners(@NotNull Warrior defeated) {
-        List<Warrior> list = new ArrayList<>();
+    private @NotNull List<Warrior> getDuelWinners(@NotNull final Warrior warrior) {
+        final List<Warrior> warriors = new ArrayList<>();
         if (getConfig().isGroupMode()) {
-            Group winnerGroup = Objects.requireNonNull(getFirstGroupDuel().get().getOther(getGroup(defeated)));
-            list = getParticipants().stream().filter(p -> isMember(winnerGroup, p))
-                    .collect(Collectors.toList());
+            final Optional<Duel<Group>> firstGroupDuel = getFirstGroupDuel();
+            if (firstGroupDuel.isPresent()) {
+                final Duel<Group> groupDuel = firstGroupDuel.get();
+                final Group group = getGroup(warrior);
+                if (group == null) {
+                    return warriors;
+                }
+                final Group winnerGroup = groupDuel.getOther(group);
+                if (winnerGroup == null) {
+                    return warriors;
+                }
+                getParticipants().stream()
+                        .filter(p -> isMember(winnerGroup, p))
+                        .forEach(warriors::add);
+                return warriors;
+            }
         } else {
-            Warrior other = getFirstWarriorDuel().get().getOther(defeated);
-            list.add(other);
+            final Optional<Duel<Warrior>> firstWarriorDuel = getFirstWarriorDuel();
+            if (firstWarriorDuel.isPresent()) {
+                final Duel<Warrior> warriorDuel = firstWarriorDuel.get();
+                final Warrior other = warriorDuel.getOther(warrior);
+                if (other == null) {
+                    return warriors;
+                }
+                warriors.add(other);
+                return warriors;
+            }
         }
-        return list;
+        return warriors;
     }
 
     @Override
-    public boolean isParticipant(@NotNull Warrior warrior) {
+    public boolean isParticipant(@NotNull final Warrior warrior) {
         return super.isParticipant(warrior) || waitingThirdPlace.contains(warrior);
     }
 
-    private void removeDuelist(@NotNull Warrior warrior) {
+    private void removeDuelist(@NotNull final Warrior warrior) {
         if (getConfig().isGroupMode()) {
             if (lost(warrior)) {
-                Group group = getGroup(warrior);
+                final Group group = getGroup(warrior);
                 groupDuelists.forEach(d -> d.remove(group));
                 groupDuelists.removeIf(d -> d.getDuelists().isEmpty());
             }
@@ -91,8 +139,8 @@ public class EliminationTournamentGame extends Game {
     }
 
     @Override
-    protected void processRemainingPlayers(@NotNull Warrior warrior) {
-        Player player = warrior.toOnlinePlayer();
+    protected void processRemainingPlayers(@NotNull final Warrior warrior) {
+        final Player player = warrior.toOnlinePlayer();
         if (player != null) {
             Bukkit.getScheduler().runTaskLater(plugin, () -> player.spigot().respawn(), 1L);
         }
@@ -100,7 +148,7 @@ public class EliminationTournamentGame extends Game {
         if (lost(warrior)) {
             if (isCurrentDuelist(warrior)) {
                 battle = false;
-                List<Warrior> duelWinners = getDuelWinners(warrior);
+                final List<Warrior> duelWinners = getDuelWinners(warrior);
                 healAndClearEffects(duelWinners);
                 runCommandsAfterBattle(duelWinners);
 
@@ -108,7 +156,7 @@ public class EliminationTournamentGame extends Game {
                 if (thirdPlaceBattle) {
                     thirdPlaceWinners = duelWinners;
                     thirdPlaceBattle = false;
-                    teleport(duelWinners, getConfig().getWatchroom());
+                    teleport(duelWinners, getConfig().getExit());
                     participants.removeIf(thirdPlaceWinners::contains);
                     if (getConfig().isUseKits()) {
                         thirdPlaceWinners.forEach(Kit::clearInventory);
@@ -118,7 +166,7 @@ public class EliminationTournamentGame extends Game {
                     secondPlaceWinners = getDuelLosers(warrior);
                 } else {
                     //not third place or final battle, winners will fight again
-                    for (Warrior dw : duelWinners) {
+                    for (final Warrior dw : duelWinners) {
                         setKit(dw);
                     }
                     teleport(duelWinners, getConfig().getLobby());
@@ -131,23 +179,20 @@ public class EliminationTournamentGame extends Game {
             //died during semi-finals, goes for third place
             if (getDuelsCount() == 2) {
                 if (config.isGroupMode()) {
-                    Group group = getGroup(warrior);
+                    final Group group = getGroup(warrior);
                     //noinspection DataFlowIssue
                     casualties.stream().filter(p -> isMember(group, p)).forEach(waitingThirdPlace::add);
                 } else {
                     waitingThirdPlace.add(warrior);
                 }
-                Bukkit.getScheduler().runTaskLater(plugin, () -> {
-                    //disconnected
-                    waitingThirdPlace.removeIf(w -> w.toOnlinePlayer() == null);
-                }, 5L);
+                Bukkit.getScheduler().runTaskLater(plugin, () -> waitingThirdPlace.removeIf(w -> w.toOnlinePlayer() == null), 5L);
             }
         }
 
         removeDuelist(warrior);
     }
 
-    private boolean lost(@NotNull Warrior warrior) {
+    private boolean lost(@NotNull final Warrior warrior) {
         if (getConfig().isGroupMode()) {
             return !getGroupParticipants().containsKey(getGroup(warrior));
         }
@@ -155,19 +200,22 @@ public class EliminationTournamentGame extends Game {
     }
 
     @Override
-    public void onRespawn(@NotNull Warrior warrior) {
+    public void onRespawn(final PlayerRespawnEvent event, @NotNull final Warrior warrior) {
+        plugin.debug("Respawning in EliminationTournamentGame for " + warrior.getName());
         if (waitingThirdPlace.contains(warrior)) {
-            Player player = warrior.toOnlinePlayer();
+            plugin.debug("Respawning in EliminationTournamentGame for " + warrior.getName() + " in third place battle");
+            final Player player = warrior.toOnlinePlayer();
             if (player == null) return;
             setKit(warrior);
-            teleport(warrior, getConfig().getLobby());
+            event.setRespawnLocation(getConfig().getLobby());
+            player.sendMessage(getLang("wait_for_third_place_fight"));
         } else {
-            super.onRespawn(warrior);
+            super.onRespawn(event, warrior);
         }
     }
 
     @Override
-    public boolean shouldKeepInventoryOnDeath(@NotNull Warrior warrior) {
+    public boolean shouldKeepInventoryOnDeath(@NotNull final Warrior warrior) {
         if (!isCurrentDuelist(warrior)) {
             return false;
         }
@@ -175,7 +223,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     @SuppressWarnings("BooleanMethodIsAlwaysInverted")
-    private boolean isPowerOfTwo(int x) {
+    private boolean isPowerOfTwo(final int x) {
         return x > 0 && (x & (x - 1)) == 0;
     }
 
@@ -198,7 +246,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void kickExcessivePlayers() {
-        Set<Warrior> toKick = new HashSet<>();
+        final Set<Warrior> toKick = new HashSet<>();
         for (int i = participants.size(); i > 2; i--) {
             if (!isPowerOfTwo(i)) {
                 toKick.add(participants.get(i - 1));
@@ -210,8 +258,8 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void kickExcessiveGroups() {
-        Set<Group> toKick = new HashSet<>();
-        List<Group> groups = new ArrayList<>(getGroupParticipants().keySet());
+        final Set<Group> toKick = new HashSet<>();
+        final List<Group> groups = new ArrayList<>(getGroupParticipants().keySet());
         for (int i = groups.size(); i > 2; i--) {
             if (!isPowerOfTwo(i)) {
                 toKick.add(groups.get(i - 1));
@@ -219,16 +267,18 @@ public class EliminationTournamentGame extends Game {
             }
             break;
         }
-        for (Group group : toKick) {
+        for (final Group group : toKick) {
             kickExcessive(participants.stream().filter(p -> isMember(group, p)).collect(Collectors.toSet()));
         }
     }
 
-    private void kickExcessive(@NotNull Set<Warrior> warriors) {
+    private void kickExcessive(@NotNull final Set<Warrior> warriors) {
         participants.removeIf(warriors::contains);
-        Set<Player> players = warriors.stream().map(Warrior::toOnlinePlayer).filter(Objects::nonNull)
+        final Set<Player> players = warriors.stream()
+                .map(Warrior::toOnlinePlayer)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
-        teleport(warriors, getConfig().getWatchroom());
+        teleport(warriors, getConfig().getExit());
         players.forEach(player -> {
             player.sendMessage(getLang("kicked_to_adjust_duels"));
             if (getConfig().isUseKits()) {
@@ -238,18 +288,15 @@ public class EliminationTournamentGame extends Game {
     }
 
     private long getWaitingThirdPlaceCount() {
-        long count;
         if (getConfig().isGroupMode()) {
-            count = getWaitingThirdPlaceGroups().size();
-        } else {
-            count = waitingThirdPlace.size();
+            return getWaitingThirdPlaceGroups().size();
         }
-        return count;
+        return waitingThirdPlace.size();
     }
 
     @NotNull
     private List<Group> getWaitingThirdPlaceGroups() {
-        return waitingThirdPlace.stream().map(this::getGroup).distinct().collect(Collectors.toList());
+        return waitingThirdPlace.stream().map(this::getGroup).distinct().collect(Collectors.toCollection(ArrayList::new));
     }
 
     private void generateDuelists() {
@@ -279,7 +326,7 @@ public class EliminationTournamentGame extends Game {
         }
     }
 
-    private <T> void generateDuelist(List<T> list, List<Duel<T>> duelList) {
+    private <T> void generateDuelist(final List<T> list, final List<Duel<T>> duelList) {
         Collections.shuffle(list);
         duelList.clear();
         for (int i = 0; i < list.size(); i = i + 2) {
@@ -293,6 +340,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void startNextDuel() {
+        plugin.debug("Starting next duel in EliminationTournamentGame");
         if (getPlayerOrGroupCount() <= 1) {
             //opponents probably disconnected before the battle
             if (firstPlaceWinners.isEmpty()) {
@@ -312,12 +360,11 @@ public class EliminationTournamentGame extends Game {
     }
 
     private int getDuelsCount() {
-        List<? extends Duel<?>> duels = getConfig().isGroupMode() ? groupDuelists : playerDuelists;
-        return duels.size();
+        return getConfig().isGroupMode() ? groupDuelists.size() : playerDuelists.size();
     }
 
     private boolean isNextDuelReady() {
-        List<? extends Duel<?>> duels = getConfig().isGroupMode() ? groupDuelists : playerDuelists;
+        final List<? extends Duel<?>> duels = getConfig().isGroupMode() ? groupDuelists : playerDuelists;
         return duels.stream().anyMatch(Duel::isValid);
     }
 
@@ -330,7 +377,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private int getPlayerOrGroupCount() {
-        int participants;
+        final int participants;
         if (getConfig().isGroupMode()) {
             participants = getGroupParticipants().size();
         } else {
@@ -341,12 +388,12 @@ public class EliminationTournamentGame extends Game {
 
     @Override
     public @NotNull Collection<Warrior> getCurrentFighters() {
-        return getParticipants().stream().filter(this::isCurrentDuelist).collect(Collectors.toList());
+        return getParticipants().stream().filter(this::isCurrentDuelist).collect(Collectors.toCollection(ArrayList::new));
     }
 
     private void informOtherDuelists() {
-        String message = getLang("wait_for_your_turn");
-        Consumer<Warrior> sendMessage = warrior -> {
+        final String message = getLang("wait_for_your_turn");
+        final Consumer<Warrior> sendMessage = warrior -> {
             if (!isCurrentDuelist(warrior)) {
                 warrior.sendMessage(message);
             }
@@ -359,10 +406,10 @@ public class EliminationTournamentGame extends Game {
         teleportToArena(new ArrayList<>(getCurrentFighters()));
     }
 
-    private @Nullable Group getAnyGroup(@Nullable List<Warrior> warriors) {
+    private @Nullable Group getAnyGroup(@Nullable final List<Warrior> warriors) {
         if (warriors != null && getConfig().isGroupMode()) {
-            for (Warrior warrior : warriors) {
-                Group group = getGroup(warrior);
+            for (final Warrior warrior : warriors) {
+                final Group group = getGroup(warrior);
                 if (group != null) {
                     return group;
                 }
@@ -372,44 +419,48 @@ public class EliminationTournamentGame extends Game {
     }
 
     @NotNull
-    private String getWinnerName(@Nullable List<Warrior> warriors) {
+    private String getWinnerName(@Nullable final List<Warrior> warriors) {
         String name = getLang("no_winner_tournament");
         if (getConfig().isGroupMode()) {
-            Group group = getAnyGroup(warriors);
+            final Group group = getAnyGroup(warriors);
             if (group != null) {
                 name = group.getName();
             }
         } else if (warriors != null && !warriors.isEmpty()) {
-            name = warriors.get(0).getName();
+            name = warriors.getFirst().getName();
         }
         return name;
     }
 
     @Override
     protected void processWinners() {
-        Winners todayWinners = databaseManager.getTodaysWinners();
+        final Winners todayWinners = databaseManager.getTodaysWinners();
 
-        Group firstGroup = getAnyGroup(firstPlaceWinners);
+        final Group firstGroup = getAnyGroup(firstPlaceWinners);
         //we must clear the inventory before adding the casualties, otherwise the already dead would lose their items again
         if (getConfig().isUseKits()) {
             firstPlaceWinners.forEach(Kit::clearInventory);
         }
+
         if (getConfig().isGroupMode() && firstGroup != null) {
             casualties.stream().filter(p -> isMember(firstGroup, p)).forEach(firstPlaceWinners::add);
-            firstPlaceWinners = firstPlaceWinners.stream().distinct().collect(Collectors.toList());
+            firstPlaceWinners = firstPlaceWinners.stream().distinct().collect(Collectors.toCollection(ArrayList::new));
             todayWinners.setWinnerGroup(getConfig().getName(), firstGroup.getName());
-            GroupWinEvent event = new GroupWinEvent(firstGroup);
+            final GroupWinEvent event = new GroupWinEvent(firstGroup);
             Bukkit.getPluginManager().callEvent(event);
         }
-        PlayerWinEvent event = new PlayerWinEvent(this, firstPlaceWinners);
+
+        final PlayerWinEvent event = new PlayerWinEvent(this, firstPlaceWinners);
         Bukkit.getPluginManager().callEvent(event);
+
         todayWinners.setWinners(getConfig().getName(), Helper.warriorListToUuidList(firstPlaceWinners));
         givePrizes(FIRST, firstGroup, firstPlaceWinners);
         givePrizes(SECOND, getAnyGroup(secondPlaceWinners), secondPlaceWinners);
         givePrizes(THIRD, getAnyGroup(thirdPlaceWinners), thirdPlaceWinners);
         SoundUtils.playSound(SoundUtils.Type.VICTORY, plugin.getConfig(), firstPlaceWinners, secondPlaceWinners,
                 thirdPlaceWinners);
-        Warrior killer = findKiller();
+
+        final Warrior killer = findKiller();
         if (killer != null) {
             givePrizes(KILLER, null, Collections.singletonList(killer));
             gameManager.setKiller(getConfig(), killer, null);
@@ -417,31 +468,42 @@ public class EliminationTournamentGame extends Game {
             discordAnnounce("discord_who_won_killer", killer.getName(), killsCount.get(killer));
             todayWinners.setKiller(getConfig().getName(), killer.getUniqueId());
         }
+
         broadcastKey("who_won_tournament", getWinnerName(firstPlaceWinners),
                 getWinnerName(secondPlaceWinners), getWinnerName(thirdPlaceWinners));
+
         discordAnnounce("discord_who_won_tournament", getWinnerName(firstPlaceWinners),
                 getWinnerName(secondPlaceWinners), getWinnerName(thirdPlaceWinners));
+
         firstPlaceWinners.forEach(warrior -> warrior.increaseVictories(getConfig().getName()));
     }
 
     @Override
-    public void setWinner(@NotNull Warrior warrior) throws CommandNotSupportedException {
+    public void setWinner(@NotNull final Warrior warrior) throws CommandNotSupportedException {
         throw new CommandNotSupportedException();
     }
 
     @Override
     protected @NotNull String getGameInfoMessage() {
         String gameInfo = getLang("game_info_duels");
-        String nextDuels = getLang("game_info_next_duels");
-        String[] firstDuel;
-        StringBuilder builder = new StringBuilder();
+        final String nextDuels = getLang("game_info_next_duels");
+        String[] firstDuel = new String[2];
+        final StringBuilder builder = new StringBuilder();
+
         if (getConfig().isGroupMode()) {
-            firstDuel = duelToNameArray(getFirstGroupDuel(), Group::getName);
+            final Optional<Duel<Group>> firstGroupDuel = getFirstGroupDuel();
+            if (firstGroupDuel.isPresent()) {
+                firstDuel = duelToNameArray(firstGroupDuel.get(), Group::getName);
+            }
             populateDuelsMessage(builder, groupDuelists, Group::getName);
         } else {
-            firstDuel = duelToNameArray(getFirstWarriorDuel(), Warrior::getName);
+            final Optional<Duel<Warrior>> firstWarriorDuel = getFirstWarriorDuel();
+            if (firstWarriorDuel.isPresent()) {
+                firstDuel = duelToNameArray(firstWarriorDuel.get(), Warrior::getName);
+            }
             populateDuelsMessage(builder, playerDuelists, Warrior::getName);
         }
+
         if (isMultipleDuels()) {
             gameInfo = gameInfo + nextDuels;
         }
@@ -449,33 +511,55 @@ public class EliminationTournamentGame extends Game {
         return MessageFormat.format(gameInfo, firstDuel[0], firstDuel[1], builder.toString());
     }
 
-    private <D> void populateDuelsMessage(StringBuilder builder, List<Duel<D>> list, Function<D, String> getName) {
-        String nextDuelsLineMessage = getLang("game_info_duels_line");
+    private <D> void populateDuelsMessage(final StringBuilder builder, @NotNull final List<Duel<D>> list, final Function<D, String> getName) {
+        final String nextDuelsLineMessage = getLang("game_info_duels_line");
         if (list.size() > 1) {
             for (int i = 1; i < list.size(); i++) {
-                Duel<D> duel = list.get(i);
-                if (!duel.isValid()) continue;
-
-                @NotNull String[] name = duelToNameArray(Optional.of(duel), getName);
-                builder.append(MessageFormat.format(nextDuelsLineMessage, i, name[0], name[1]));
+                final Duel<D> duel = list.get(i);
+                if (!duel.isValid()) {
+                    plugin.debug("Skipping duel " + i + " because it is not valid");
+                    continue;
+                }
+                final String[] names = duelToNameArray(duel, getName);
+                builder.append(MessageFormat.format(nextDuelsLineMessage, i, names[0], names[1]));
             }
         }
     }
 
     private boolean isMultipleDuels() {
-        List<? extends Duel<?>> duels = getConfig().isGroupMode() ? groupDuelists : playerDuelists;
+        final List<? extends Duel<?>> duels = getConfig().isGroupMode() ? groupDuelists : playerDuelists;
         return duels.stream().filter(Duel::isValid).count() > 1;
     }
 
-    private <D> String[] duelToNameArray(Optional<Duel<D>> duel, Function<D, String> getName) {
-        if (!duel.isPresent()) {
-            return new String[]{"", ""};
-        }
-        return duel.get().getDuelists().stream().filter(Objects::nonNull).map(getName).toArray(String[]::new);
+    private <D> String[] duelToNameArray(final Duel<D> duel, final Function<D, String> getName) {
+        return duel.getDuelists().stream()
+                .filter(Objects::nonNull)
+                .map(getName)
+                .toArray(String[]::new);
     }
 
-    private boolean isMember(Group group, Warrior warrior) {
+    private boolean isMember(final Group group, final Warrior warrior) {
         return group.equals(getGroup(warrior));
     }
 
+    @Override
+    public boolean equals(final Object o) {
+        if (!(o instanceof final EliminationTournamentGame that)) return false;
+        if (!super.equals(o)) return false;
+
+        return thirdPlaceBattle == that.thirdPlaceBattle && playerDuelists.equals(that.playerDuelists) && groupDuelists.equals(that.groupDuelists) && waitingThirdPlace.equals(that.waitingThirdPlace) && firstPlaceWinners.equals(that.firstPlaceWinners) && Objects.equals(secondPlaceWinners, that.secondPlaceWinners) && Objects.equals(thirdPlaceWinners, that.thirdPlaceWinners);
+    }
+
+    @Override
+    public int hashCode() {
+        int result = super.hashCode();
+        result = 31 * result + playerDuelists.hashCode();
+        result = 31 * result + groupDuelists.hashCode();
+        result = 31 * result + waitingThirdPlace.hashCode();
+        result = 31 * result + Boolean.hashCode(thirdPlaceBattle);
+        result = 31 * result + firstPlaceWinners.hashCode();
+        result = 31 * result + Objects.hashCode(secondPlaceWinners);
+        result = 31 * result + Objects.hashCode(thirdPlaceWinners);
+        return result;
+    }
 }
